@@ -27,21 +27,15 @@
 	<description>AgileRequirementsEngineeringTool</description>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-controls</artifactId>
-    <version>21.0.2</version>
-</dependency>
-<dependency>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-fxml</artifactId>
-    <version>21.0.2</version>
-</dependency>
-
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -56,8 +50,24 @@
 		</dependency>
 
 		<dependency>
-    		<groupId>org.springframework.boot</groupId>
-    		<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>21.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>21.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>21.0.2</version>
 		</dependency>
 
 		<dependency>
@@ -83,14 +93,15 @@
 					<mainClass>com.example.agile_re_tool.backend.BackendApplication</mainClass>
 				</configuration>
 			</plugin>
-			        <plugin>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-maven-plugin</artifactId>
-            <version>0.0.8</version>
-            <configuration>
-                <mainClass>com.example.agile_re_tool.ui.Workspace</mainClass>
-            </configuration>
-        </plugin>
+		        <plugin>
+		            <groupId>org.openjfx</groupId>
+		            <artifactId>javafx-maven-plugin</artifactId>
+		            <version>0.0.8</version>
+		            <configuration>
+	                <mainClass>com.agile.requirements.AgileReToolDesktopApp</mainClass>
+	                <jvmArgs>--enable-native-access=javafx.graphics</jvmArgs>
+		            </configuration>
+		        </plugin>
 		</plugins>
 	</build>
 
